fixed the register button alignment

--- a/docs/register_style.css
+++ b/docs/register_style.css
@@ -165,15 +165,16 @@ input, select {
 }
 
 input[type=submit] {
+    display: block;
     width: 25%;
     background-color: #76b852;
     color: white;
     padding: 14px 20px;
-    margin: 5px 0px;
+    margin: 5px auto;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    display: inline-block;
+    
 }
 
 input[type=submit]:hover {
